--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -504,7 +504,7 @@
                         <tr><td>21</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_21" value="Dầu hộp số tự động"></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_21"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_21" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_21" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_21" readonly></td><td class="tot-col"><input type="radio" name="service_status_21" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_21" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_21" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_21" value="X"></td></tr>
                         <tr><td>22</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_22" value="Dầu vi sai / cầu"></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_22"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_22" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_22" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_22" readonly></td><td class="tot-col"><input type="radio" name="service_status_22" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_22" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_22" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_22" value="X"></td></tr>
                         <tr><td>23</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_23" value="V-belt / Dây curoa ngoài"></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_23"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_23" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_23" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_23" readonly></td><td class="tot-col"><input type="radio" name="service_status_23" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_23" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_23" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_23" value="X"></td></tr>
-                        <tr><td>24</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_24" value="Bugi R:* "></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_24"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_24" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_24" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_24" readonly></td><td class="tot-col"><input type="radio" name="service_status_24" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_24" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_24" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_24" value="X"></td></tr>
+                        <tr><td>24</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_24" value="Bugi R: *"></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_24"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_24" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_24" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_24" readonly></td><td class="tot-col"><input type="radio" name="service_status_24" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_24" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_24" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_24" value="X"></td></tr>
                         <tr><td>25</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_25" value="Dầu trợ lực lái"></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_25"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_25" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_25" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_25" readonly></td><td class="tot-col"><input type="radio" name="service_status_25" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_25" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_25" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_25" value="X"></td></tr>
                         <tr><td>26</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_26" value="Lọc nhiên liệu (diesel)"></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_26"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_26" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_26" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_26" readonly></td><td class="tot-col"><input type="radio" name="service_status_26" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_26" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_26" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_26" value="X"></td></tr>
                         <tr><td>27</td><td class="hang-muc"><input type="text" class="hang-muc-input" name="service_hangMuc_27" value="Lọc nhiên liệu động cơ xăng"></td><td class="trang-thai-col"><span class="status-indicator"></span></td><td><input type="text" class="dien-giai-input" name="service_dienGiai_27"></td><td><input type="number" step="any" class="sl-input" name="service_soLuong_27" oninput="calculateRowTotal(this)"></td><td><input type="number" step="any" class="don-gia-input" name="service_donGia_27" oninput="calculateRowTotal(this)"></td><td><input type="text" class="thanh-tien-input" name="service_thanhTien_27" readonly></td><td class="tot-col"><input type="radio" name="service_status_27" value="Tốt"></td><td class="luu-y-col"><input type="radio" name="service_status_27" value="Lưu ý"></td><td class="thay-col"><input type="radio" name="service_status_27" value="Thay"></td><td class="xac-nhan-col"><input type="checkbox" name="service_xacNhan_27" value="X"></td></tr>
@@ -532,8 +532,7 @@
                     <strong>Ghi chú trạng thái:</strong> 
                     <strong>I</strong> - Inspection: Kiểm tra và xử lí theo tình trạng; 
                     <strong>A</strong> - Adjust: Vệ sinh hoặc căn chỉnh; 
-                    <strong>R</strong> - Replace: Thay thế.<br>
-                Bugi R: mỗi 40.000 km với loại thường và 100.000 km với loại điện cực hợp kim
+                    <strong>R</strong> - Replace: Thay thế.
                 </div>
 
                 <div class="request-details" style="margin-top: 15px;">
@@ -543,7 +542,6 @@
                         <textarea id="generalNotes" name="ghiChuChung" placeholder="Các ghi chú hoặc yêu cầu đặc biệt khác"></textarea>
                     </div>
                 </div>
-
                 <div class="signature-section">
                     <div class="signature-box">
                         <div class="signature-title">Đại lý</div>
@@ -578,12 +576,12 @@
         // =================================================================
 
         const maintenanceSchedule = {
-            'Kiểm tra an toàn': [null, null, null, null], // Hạng mục mới
+            'Kiểm tra an toàn': [null, null, null, null],
             'Lốp Xe': ['I', 'A', 'A', 'A'],
             'Gạt mưa': ['I', 'R', 'R', 'R'],
             'Nước rửa kính': ['I', 'A', 'A', 'A'],
-            'Má Phanh': ['I', 'I', 'A', 'A'], // Hạng mục mới, dựa trên logic của Phanh
-            'Đĩa Phanh': ['I', 'I', 'A', 'A'], // Hạng mục mới, dựa trên logic của Phanh
+            'Má Phanh': ['I', 'I', 'A', 'A'],
+            'Đĩa Phanh': ['I', 'I', 'A', 'A'],
             'Dầu động cơ': ['I', 'I', 'I', 'I'],
             'Lọc dầu động cơ': ['I', 'R', 'R', 'R'],
             'Nước làm mát': [null, 'I', 'R', 'R'],
@@ -596,7 +594,7 @@
             'Rotuyn (lái, trụ)': [null, null, 'I', 'I'],
             'Phuộc': ['I', 'I', 'I', 'I'],
             'Bạc đạn bánh xe': ['I', 'I', 'I', 'I'],
-            'Dầu hộp số thường': ['I', 'R', null, null], // Hạng mục mới
+            'Dầu hộp số thường': ['I', 'R', null, null],
             'Dầu hộp số tự động': ['I', 'R', null, null],
             'Dầu vi sai / cầu': ['I', 'I', 'I', 'I'],
             'V-belt / Dây curoa ngoài': ['I', 'I', 'I', 'I'],
@@ -613,33 +611,41 @@
             'Vệ sinh họng ga': ['A', 'A', 'A', 'A']
         };
 
+        /**
+         * 2. Hàm xác định cấp bảo dưỡng từ số KM (PHIÊN BẢN CẬP NHẬT)
+         * Xác định cấp bảo dưỡng dựa trên mốc 5000km gần nhất đã qua.
+         * @param {number} km - Số kilomet hiện tại
+         * @returns {number|null} Trả về cấp bảo dưỡng (1, 2, 3, 4) hoặc null.
+         */
         function getMaintenanceLevel(km) {
-            if (km <= 0) return null;
-            if (km % 40000 === 0) return 4;
-            if (km % 20000 === 0) return 3;
-            if (km % 10000 === 0) return 2;
-            if (km % 5000 === 0) return 1;
-            return null;
+            // Nếu KM dưới mốc bảo dưỡng đầu tiên, không áp dụng cấp nào
+            if (km < 5000) {
+                return null;
+            }
+
+            // Tìm mốc bảo dưỡng gần nhất mà xe đã vượt qua
+            // Ví dụ: 7800km -> lastMilestone = 5000km; 12500km -> lastMilestone = 10000km
+            const lastMilestone = Math.floor(km / 5000) * 5000;
+
+            // Kiểm tra mốc đó thuộc cấp nào, ưu tiên từ cấp cao đến thấp
+            if (lastMilestone % 40000 === 0) return 4; // Các mốc 40k, 80k, 120k...
+            if (lastMilestone % 20000 === 0) return 3; // Các mốc 20k, 60k, 100k...
+            if (lastMilestone % 10000 === 0) return 2; // Các mốc 10k, 30k, 50k...
+            if (lastMilestone % 5000 === 0) return 1;  // Các mốc còn lại như 5k, 15k, 25k...
+
+            return null; // Trường hợp dự phòng
         }
 
         function updateAllMaintenanceStatus() {
             const odometerInput = document.getElementById('odometer');
             const km = parseInt(odometerInput.value, 10);
-
-            if (isNaN(km)) { 
-                clearAllStatus();
-                return;
-            }
-
+            if (isNaN(km)) { clearAllStatus(); return; }
             const level = getMaintenanceLevel(km);
-            const levelIndex = level ? level - 1 : null; 
-
+            const levelIndex = level ? level - 1 : null;
             const serviceRows = document.querySelectorAll('.detailed-service tbody tr');
-
             serviceRows.forEach(row => {
                 const hangMucInput = row.querySelector('.hang-muc-input');
                 const statusIndicator = row.querySelector('.status-indicator');
-
                 if (hangMucInput && statusIndicator) {
                     const serviceName = hangMucInput.value;
                     let status = ''; 
@@ -785,6 +791,3 @@
     </script>
 </body>
 </html>
-
-
-
