--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -532,7 +532,8 @@
                     <strong>Ghi chú trạng thái:</strong> 
                     <strong>I</strong> - Inspection: Kiểm tra và xử lí theo tình trạng; 
                     <strong>A</strong> - Adjust: Vệ sinh hoặc căn chỉnh; 
-                    <strong>R</strong> - Replace: Thay thế.
+                    <strong>R</strong> - Replace: Thay thế.<br> 
+                    <strong>Bugi R: mỗi 40.000 km với loại thường và 100.000 km với loại điện cực hợp kim </strong>
                 </div>
 
                 <div class="request-details" style="margin-top: 15px;">
@@ -791,3 +792,4 @@
     </script>
 </body>
 </html>
+
