--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/tracuu.html'">📄 Tra cứu thông tin xe </button>
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/Phieukiemlop2.html'">📄 Phiếu Kiểm Tra Lốp</button>
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
-            <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'">📄 Phiếu Dịch Vụ </button>
+            <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'">📄 Phiếu Kiểm Tra Xe </button>
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/baoduong.html'">📄 Phiếu Bảo Dưỡng </button>
             <button class="tire-form-button" id="submitToSheet">📤 Gửi Thông Tin</button>
             <button class="tire-form-button clear-button" id="clearFormButton">🗑️ Xóa Form</button>
@@ -1535,4 +1535,5 @@
     </script>
 </body>
 </html>
+
 
