--- a/baoduong.html
+++ b/baoduong.html
@@ -250,10 +250,10 @@
         <div class="button-group">
             <button class="app-button print-button" id="printButton">🖨️ In Phiếu</button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/tracuu.html'">📄 Tra cứu thông tin xe </button>
-            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">📄 Phiếu KT Xe </button>
+            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">📄 Phiếu KT An Toàn </button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/Phieukiemlop2.html'">📄 Phiếu KT Lốp</button>
             <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
-            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'">📄 Phiếu Nhận Dịch Vụ</button>
+            <button class="app-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'">📄 Phiếu Kiểm Tra Xe</button>
             <button class="app-button" id="submitToSheet">📤 Gửi Thông Tin</button>
             <button class="app-button clear-button" id="clearFormButton">🗑️ Xóa Form</button>
         </div>
