--- a/kiemtragam.html
+++ b/kiemtragam.html
@@ -319,12 +319,12 @@
             Gửi Thông Tin
         </a>
         <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
-            Phiếu Kiểm Tra An Toàn Xe
+            Phiếu Kiểm Tra An Toàn
         </a>
         <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/Phieukiemlop2.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
             Phiếu Kiểm Tra Lốp
         <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieunhandichvu.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
-            Phiếu Dịch Vụ
+            Phiếu Kiểm Tra Xe
         <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/tracuu.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
             Tra cứu thông tin xe
         </a>
