--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phiếu Kiểm Tra Xe - PHI LONG AUTO</title>
+    <title>Phiếu Kiểm An Toàn Xe - PHI LONG AUTO</title>
     <style>
         /* Reset và cấu hình cơ bản */
         * {
@@ -1535,5 +1535,6 @@
     </script>
 </body>
 </html>
+
 
 
