--- a/baoduong.html
+++ b/baoduong.html
@@ -264,7 +264,7 @@
 
                 <div class="header">
                     <div class="header-left">
-                        <h1>PHIẾU NHẬN DỊCH VỤ</h1>
+                        <h1>PHIẾU BẢO DƯỠNG</h1>
                         <div class="form-number">№ <span id="receiptNumber"></span> / <span id="currentMonth"></span></div>
                     </div>
                     <div class="header-right">
