--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
 
                 <div class="header">
                     <div class="header-left">
-                        <h1>PHIẾU KIỂM TRA XE</h1>
+                        <h1>PHIẾU AN TOÀN XE</h1>
                         <div class="form-number">№ <span id="receiptNumber"></span> / <span id="currentMonth"></span></div>
                     </div>
                     <div class="header-right">
@@ -1535,6 +1535,7 @@
     </script>
 </body>
 </html>
+
 
 
 
