--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -381,7 +381,7 @@
 
                 <div class="header">
                     <div class="header-left">
-                        <h1>PHIẾU NHẬN DỊCH VỤ</h1>
+                        <h1>PHIẾU KIỂM TRA XE</h1>
                         <div class="form-number">№ <span id="receiptNumber"></span> / <span id="currentMonth"></span></div>
                     </div>
                     <div class="header-right">
@@ -792,5 +792,6 @@
     </script>
 </body>
 </html>
+
 
 
