--- a/Phieukiemlop2.html
+++ b/Phieukiemlop2.html
@@ -1274,7 +1274,7 @@ body {
 
             <div class="form-fields" role="form" aria-label="Thông tin xe khách hàng">
                 <div class="field-group">
-                    <span class="field-label-bold">Tên khách hàng / xe:</span>
+                    <span class="field-label-bold">Tên khách hàng / SDT:</span>
                     <span class="field-line" contenteditable="true" aria-live="polite" aria-atomic="true" id="customer-name"></span>
                 </div>
                 <div class="field-group">
