--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -61,15 +61,11 @@
 
         /* Định dạng logo */
         .logo {
-            width: 80px; height: 60px;
-            background: #000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-weight: bold;
-            font-size: 10px;
-            text-align: center;
+			width: 120px;      /* hoặc 80px nếu muốn giữ nguyên */
+			height: auto;      /* giữ tỉ lệ ảnh */
+			display: block;
+			margin-top: -10px;   /* đẩy logo lên */
+			margin-left: -210px;  /* đẩy logo sang trái */
         }
 
         /* Phần thông tin khách hàng và xe: Chia làm 2 cột */
@@ -792,6 +788,7 @@
     </script>
 </body>
 </html>
+
 
 
 
