--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -322,7 +322,12 @@
             .header { margin-bottom: 8px; padding-bottom: 5px; }
             .header h1 { font-size: 18px; }
             .form-number { font-size: 14px; }
-            .logo { width: 60px; height: 45px; font-size: 8px; }
+            .logo {
+				width: 60px;
+				height: auto;
+				margin-top: -15mm;   /* dịch logo lên */
+				margin-left: -55mm;  /* dịch logo sang trái */
+			}
             .info-section { margin-bottom: 8px; gap: 10px; }
             .info-group { margin-bottom: 4px; font-size: 9px; }
             .info-group label { font-size: 9px; }
@@ -788,6 +793,7 @@
     </script>
 </body>
 </html>
+
 
 
 
