--- a/phieunhandichvu.html
+++ b/phieunhandichvu.html
@@ -453,7 +453,7 @@
                         <textarea id="customerRequest" name="yeuCauKhachHang" placeholder="Mô tả các vấn đề hoặc dịch vụ khách hàng yêu cầu"></textarea>
                     </div>
                     <div class="request-group">
-                        <label for="initialDiagnosis">Chẩn đoán ban đầu:</label>
+                        <label for="initialDiagnosis">Chẩn đoán và Ghi Chú:</label>
                         <textarea id="initialDiagnosis" name="chanDoanBanDau" placeholder="Mô tả chẩn đoán ban đầu của kỹ thuật viên"></textarea>
                     </div>
                 </div>
@@ -793,6 +793,7 @@
     </script>
 </body>
 </html>
+
 
 
 
