--- a/baoduong.html
+++ b/baoduong.html
@@ -311,7 +311,7 @@
                                 <option value="Trần Ngọc Hào">
                                 <option value="Nguyễn Phước Hiếu">
                                 <option value="Nguyễn Trung Kiên">
-								<option value="Nguyễn Chí Tâm">
+								<option value="Nguyễn Chí Tâm CN1">
 								<option value="Phạm Kim Phương">
 								<option value="Lân Văn Thành">
 								<option value="Nguyễn Thị Thúy Hằng">
